; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_item.c_is_transparent.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_item.c_is_transparent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @is_transparent(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp eq i32 %4, 130
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %18

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @ABS(i32 %8)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = call i64 @is_plant(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %7
  store i32 1, i32* %2, align 4
  br label %18

14:                                               ; preds = %7
  %15 = load i32, i32* %3, align 4
  switch i32 %15, label %17 [
    i32 130, label %16
    i32 129, label %16
    i32 128, label %16
  ]

16:                                               ; preds = %14, %14, %14
  store i32 1, i32* %2, align 4
  br label %18

17:                                               ; preds = %14
  store i32 0, i32* %2, align 4
  br label %18

18:                                               ; preds = %17, %16, %13, %6
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @ABS(i32) #1

declare dso_local i64 @is_plant(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
